<resources>
    <string name="app_name">TAlbum</string>
    <string name="about_appname">App: TAlbum</string>
    <string name="about_version">Version: 1.0</string>
    <string name="about_android">Android: 11.0</string>
    <string name="about_copyright">Copyright: No</string>
    <string name="about_license">License: No</string>
    <string name="edit_save">Save</string>
    <string name="search_place">Searching...</string>
    <string name="add_album_title">"Choose at least 3 photos "</string>
    <string name="add_album_input">Enter album title</string>
    <string name="add_album_btnCancel">Cancel</string>
    <string name="add_album_btnAdd">Add</string>
    <string name="info_title">Information</string>
    <string name="info_name">Name</string>
    <string name="info_date">Date</string>
    <string name="info_dimension">Dimensions</string>
    <string name="info_size">Size</string>
    <string name="info_mime">MIME Type</string>
    <string name="more_btn_change_pass">Change Password</string>
    <string name="more_lang">Language</string>
    <string name="more_about">About</string>
    <string name="ablum_name">Album Name</string>
    <string name="popup_mask">OK</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_album">Album</string>
    <string name="bottom_menu_favorite">Favorite</string>
    <string name="bottom_menu_more">More</string>
    <string name="detail_hide">Hide</string>
    <string name="detail_show">Show</string>
    <string name="detail_info">Information</string>
    <string name="toolbar_select">Select</string>

    <string name="dialog_title">Confirm delete</string>
    <string name="dialog_message">Are you sure you want to delete this photo?</string>
    <string name="positive_button">Yes</string>
    <string name="negative_button">No</string>

    <string name="lang_title">Select language</string>
    <string name="lang_eng">English</string>
    <string name="lang_vie">Vietnamese</string>
    <string name="dialog_title_delfromalbum">Confirm remove</string>
    <string name="dialog_message_delfromalbum">Are you sure you want to remove this photo?</string>
    <string name="dialog_title_addfromalbum">Confirm add</string>
    <string name="dialog_message_addfromalbum">Are you sure you want to add this photo?</string>

    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="title_change_password">Change pasword</string>

    <string name="in_old_password">Incorrect old password</string>
    <string name="fit_new_password">Incorrect confirm password</string>
    <string name="change_success">Change password successfully</string>
    <string name="change_fail">Change password </string>

    <string name="fill_password">Input password</string>
    <string name="title_fill_password">Input password to open hidden album</string>


</resources>