<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_album_title"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingBottom="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPhotos"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scrollbars="vertical" />

    <EditText
        android:id="@+id/edt_album_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_album_input" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_album_btnCancel"
            android:textColor="@color/black"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_album_btnAdd"
            android:textColor="@color/black" />
    </LinearLayout>
</LinearLayout>

