<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MoreFragment">

    <TextView
        android:id="@+id/tvEmpty"
        android:layout_width="match_parent"
        android:layout_height="71dp" />

    <TextView
        android:id="@+id/txtChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:drawableLeft="@drawable/ic_change_password"
        android:drawablePadding="8dp"
        android:text="@string/more_btn_change_pass"
        android:textSize="20dp"
        android:fontFamily="@font/poppins_regular"/>

    <TextView
        android:id="@+id/txtLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:drawableLeft="@drawable/ic_language"
        android:drawablePadding="8dp"
        android:text="@string/more_lang"
        android:textSize="20dp"
        android:fontFamily="@font/poppins_regular"/>

    <TextView
        android:id="@+id/txtAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:drawableLeft="@drawable/ic_about"
        android:drawablePadding="8dp"
        android:text="@string/more_about"
        android:textSize="20dp"
        android:fontFamily="@font/poppins_regular"/>

</LinearLayout>